# ai

./: .gitignore  README.md
0_pytorch/2_CNN/my-cnn-1-gpu/: main.py  pyproject.toml
0_pytorch/3_RNN/1_LSTM/: helpers.py  main.py  model.py  pyproject.toml  saved_weights.pt  train_test.py
0_pytorch/3_RNN/1_LSTM/runs-backup/Aug01_23-38-46_DESKTOP-7330BS0/: events.out.tfevents.1690925926.DESKTOP-7330BS0.19875.0
0_pytorch/5_Transformer/: main.py  pyproject.toml
10_AutoGen/project-3/: pyproject.toml  script0.py  script1.py
10_AutoGen/project-3/.cache/42/: cache.db
10_AutoGen/project-3/temp_dir_0/fluentui-app/: package-lock.json  package.json
10_AutoGen/project-3/temp_dir_1/: check_directory.py  list_project_files.py  read_project_info.py
11_Semantic-kernel/6_RAG_text/: pyproject.toml  script.py
11_Semantic-kernel/6_RAG_text/chromadb/: chroma.sqlite3
15_MCP/2_tavily_sse/my_server/: pyproject.toml  server.py
15_MCP/2_tavily_sse/my_server/tools/: tavily_extract.py  tavily_search.py
20_dspy/2_RAG/1_chromadb/: 2_query-db.py  pyproject.toml
30_reinforcement_learning/1_gymnasium/1_spaces/: main.py  pyproject.toml
3_jinja/2_advanced/: pyproject.toml  script.py
5_openai/2_chatbot/: main.py  pyproject.toml
5_openai/3_chatbot_api/: pyproject.toml
5_openai/3_custom_functions/: main-simplest-http.py  main-simplest.py  pyproject.toml
5_openai/99_MyChat/api/: main.py  pyproject.toml
6_hugging-face/: 4_question-answer.py  7_text-to-image.py  pyproject.toml
6_hugging-face/0_hub/: call_inference.py  publish_via_api.py
6_hugging-face/1_inference/: 1_sentiment-analysis.py  6_translation.py  8_text-to-speech.py
6_hugging-face/1_inference/Mac/: 3_text-generation.py  pyproject.toml
6_hugging-face/1_inference/Mac/3_text-generation/1_example-cpu/: main.py
6_hugging-face/1_inference/Mac/3_text-generation/2_example-gpu/: main.py
6_hugging-face/1_inference/Win/: 2_zero-shot-classification.py  3_text-generation-2.py  3_text-generation-3.py  3_text-generation.py  7_text-to-image.py
6_hugging-face/1_inference/Win/1_hugging-face-hub/: pyproject.toml
6_hugging-face/1_inference/Win/2_custom/: pyproject.toml
6_hugging-face/2_inference_optimization/1_bitsandbytes/2_example/: README.md  main.py
6_hugging-face/2_inference_optimization/1_bitsandbytes/3_text-generation/: main-gpu-4bit.py
6_hugging-face/2_inference_optimization/Win/1_bitsandbytes/2_example/: pyproject.toml
6_hugging-face/2_inference_optimization/Win/1_bitsandbytes/3_text-generation/: main-cpu-4bit.py
6_hugging-face/2_inference_optimization/Win/1_bitsandbytes/4_text2text-generation/: main-gpu-32bit.py
6_hugging-face/2_inference_optimization/Win/2_accelerate/: README.md  pyproject.toml
6_hugging-face/2_inference_optimization/Win/???/2_accelerate/: main.py
6_hugging-face/2_run_optimization/1_bitsandbytes/: README.md
6_hugging-face/2_run_optimization/1_bitsandbytes/1_example/: pyproject.toml
6_hugging-face/2_run_optimization/1_bitsandbytes/3_text-generation/: main-cpu-32bit.py  main-gpu-32bit.py
6_hugging-face/2_run_optimization/1_bitsandbytes/4_text2text-generation/: main-cpu-32bit.py  pyproject.toml
6_hugging-face/3_training/1_text-classification/project-1/: main-using.py
6_hugging-face/3_training/1_text-classification/project-2/: main-using.py
6_hugging-face/3_training/1_text-classification/project-3/: pyproject.toml
6_hugging-face/3_training/2_question-answering/project-1/: main-training.py
6_hugging-face/3_training/2_question-answering/project-2/: pyproject.toml
6_hugging-face/4_fine-tuning_optimization/1_bitsandbytes/1_text-generation=Mistral/: pyproject.toml
6_hugging-face/4_fine-tuning_optimization/Win/3_text-generation/: README.md
6_hugging-face/9_inference_fine-tuned/TGI/: README.md
6_hugging-face/9_inference_fine-tuned/TGI/project2-remote/: pyproject.toml
6_hugging-face/9_inference_fine-tuned/vLLM/: pyproject.toml  script.py
6_hugging-face/9_inference_fine-tuned/vLLM/docker/: data.py  pyproject.toml  tools.py
6_hugging-face/9_inference_fine-tuned/vLLM/python/: script.py
6_hugging-face/NEW/1_basics/: main-hf-hub.py  main-http-chat-completion-api.py  main-openai.py  pyproject.toml
6_hugging-face/NEW/2_multimodal/: encode.py  main.py
6_hugging-face/NEW/3_chat_history/: main-no-historypy  main-with-history.py  pyproject.toml
6_hugging-face/NEW/4_tools/: main-finished.py  main-start.py  pyproject.toml
6_hugging-face/OLD/0_hub/: call_inference.py  publish.py  pyproject.toml  script.py
6_hugging-face/OLD/9_inference_fine-tuned/Ollama/: README.md
6_hugging-face/OLD/docs/: transformers.md
6_hugging-face/models/: 1_mpt-7b.py
7_databases/5_GraphRAG/0_basics/: pyproject.toml
7_langchain/12_toolkits/test-1-python-agent/: pyproject.toml  script.py
7_langchain/2_chains/5_chat/: pyproject.toml  script1.py
7_langchain/2_ollama/3_RAG/: pyproject.toml  script1.py
7_langchain/3_RAG/1_weaviate/: README.md  pyproject.toml  script-load-from-disk.py  script-save-to-disk.py
7_langchain/4_agents/1_basics/: pyproject.toml  script0-basic-detailed.py  script0-basic.py  script1-ReAct.py
7_langchain/50_tests/1_RetrievalQA/: pyproject.toml  script.py
7_langchain/50_tests/1_RetrievalQA/db/: chroma-collections.parquet
7_langchain/50_tests/1_RetrievalQA/source/: joker.txt
7_langchain/5_hugging-face/2_local-model/: main.py  pyproject.toml
7_langchain/old/11_tools/: pyproject.toml
7_langchain/old/11_tools/test-2-shell-terminal/: script.py
7_langchain/old/11_tools/test-3-human/: script.py
7_langchain/old/11_tools/test-4-google-search/: script.py
8_Azure_AI/1_azure-ml/2_training_local/: pyproject.toml
8_Azure_AI/1_azure-ml/2_training_local/environment/: env.yaml
8_Azure_AI/1_azure-ml/2_training_local/model/: data_train.py  main_train.py  plots.py
8_Azure_AI/1_azure-ml/50_test/: pyproject.toml  saved_weights.pt
8_Azure_AI/1_azure-ml/50_test/cloud/: score.py
8_vector-databases/1_chroma/: pyproject.toml
9_langchain/1.5_tools/openai/: pyproject.toml
9_langgraph/1_simple/3_rag/: pyproject.toml  script-save-to-disk.py  script.py
(+927 files in other folders)
