[tool.poetry]
name = "3-custom-functions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
yfinance = "^0.2.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
