[project]
name = "my_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "mcp>=1.5.0",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.54",
]


[project.scripts]
my-mcp-finance-server = "server:serve"
