[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.21.4"
python-dotenv = "^1.0.1"
bitsandbytes = "^0.42.0"
accelerate = "^0.27.2"
transformers = "^4.38.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
