[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.9"
chromadb = "^0.4.24"
langchain-community = "^0.0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
