[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
weaviate-client = "^4.5.4"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
langchain-core = "^0.1.33"
langchain-openai = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
