[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.222"
openai = "^0.27.7"
google-search-results = "^2.4.2"
huggingface-hub = "^0.14.1"
python-dotenv = "^1.0.0"
wikipedia = "^1.4.0"
wolframalpha = "^5.0.0"
youtube-search = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
