[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azureml-core = "^1.52.0"
python-dotenv = "^1.0.0"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-linux_x86_64.whl" }
matplotlib = "^3.7.1"
scikit-learn = "^1.3.0"
numpy = "^1.24.3"
pandas = "^2.0.2"
nltk = "^3.8.1"
gensim = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
