[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
openai = "^1.14.2"
langchain = "^0.2.3"
langchain-community = "^0.2.4"
langchain-core = "^0.2.5"
langchain-openai = "^0.1.8"
langchain-experimental = "^0.0.60"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
